--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,15 @@ Package: TestPackage
 Title: This Is A Toy Package
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Kostas", "Papadopoulos", , "Kpap2504@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-Imports: forecast, ggplot2
+Imports: 
+    forecast,
+    ggplot2,
+    broom,
+    dplyr,
+    magrittr
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
